// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Custom Label - Variant A Default 1`] = `
<div
  className="ms-Stack css-61"
>
  <label
    className="ms-Label root-62"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-63"
    data-is-focusable={true}
    id="id__11"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-64"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-66"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Custom Label Default 1`] = `
<div
  className="ms-Stack css-61"
>
  <label
    className="ms-Label root-62"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-63"
    data-is-focusable={true}
    id="my-callout"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-64"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-66"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch Card Default 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-69"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md6"
    >
      <span
        className="css-69"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-70"
      >
        <div
          className="ms-StackItem css-71"
        >
          <div
            className="ms-Stack css-72"
          >
            <div
              className="ms-TextField root-74"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <label
                  className="ms-Label root-62"
                  htmlFor="TextField15"
                  id="TextFieldLabel17"
                >
                  Hours
                </label>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-75"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel17"
                    className="ms-TextField-field field-76"
                    id="TextField15"
                    max={24}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="12"
                  />
                </div>
              </div>
            </div>
            <div
              className="ms-TextField root-74"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <label
                  className="ms-Label root-62"
                  htmlFor="TextField18"
                  id="TextFieldLabel20"
                >
                  Minutes
                </label>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-75"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel20"
                    className="ms-TextField-field field-76"
                    id="TextField18"
                    max={59}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="32"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-71"
        >
          <div
            className="ms-MessageBar ms-MessageBar-multiline root-85"
          >
            <div
              className="ms-MessageBar-content content-86"
            >
              <div
                aria-hidden={true}
                className="ms-MessageBar-icon iconContainer-87"
              >
                <i
                  aria-hidden={true}
                  className="icon-94"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                className="ms-MessageBar-text text-89"
                id="MessageBar21"
                role="status"
              >
                <span
                  className="ms-MessageBar-innerText innerText-90"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <div
        className="ms-Stack css-95"
      >
        <div
          className="ms-StackItem css-71"
        />
        <div
          className="ms-StackItem css-71"
        >
          <button
            className="ms-Button ms-Button--primary root-96"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-64"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-98 ms-Button-icon icon-66"
                data-icon-name="Clock"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-2\\"",
                  }
                }
              >
                
              </i>
              <span
                className="ms-Button-textContainer textContainer-65"
              >
                <span
                  className="ms-Button-label label-97"
                  id="id__22"
                >
                  Add Scheduled Slot
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
      <span
        className="css-69"
      >
        <h3>
          Scheduled
        </h3>
      </span>
      <div
        className="ms-Viewport"
        style={
          Object {
            "minHeight": 1,
            "minWidth": 1,
          }
        }
      >
        <div
          className="ms-DetailsList is-horizontalConstrained detailsList-99"
          data-automationid="DetailsList"
          data-is-scrollable="false"
        >
          <div
            aria-colcount={2}
            aria-readonly="true"
            aria-rowcount={3}
            role="grid"
          >
            <div
              className="ms-DetailsList-headerWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-FocusZone css-50 ms-DetailsHeader root-101"
                data-automationid="DetailsHeader"
                data-focuszone-id="FocusZone26"
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDownCapture={[Function]}
                onMouseMove={[Function]}
                role="row"
              >
                <div
                  aria-colindex={1}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-117"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-in-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-125"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header25-punch-in-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-123"
                      data-is-focusable={true}
                      id="header25-punch-in-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-124"
                        id="header25-punch-in-time-name"
                      >
                        In Time
                      </span>
                    </span>
                  </span>
                </div>
                <div
                  aria-colindex={2}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-117"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-out-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-125"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header25-punch-out-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-123"
                      data-is-focusable={true}
                      id="header25-punch-out-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-124"
                        id="header25-punch-out-time-name"
                      >
                        Out Time
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-DetailsList-contentWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-SelectionZone"
                onClick={[Function]}
                onContextMenu={[Function]}
                onDoubleClick={[Function]}
                onFocusCapture={[Function]}
                onKeyDown={[Function]}
                onKeyDownCapture={[Function]}
                onMouseDown={[Function]}
                onMouseDownCapture={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-50 focusZone-100"
                  data-focuszone-id="FocusZone27"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                >
                  <div
                    className="ms-List"
                    role="presentation"
                  >
                    <div
                      className="ms-List-surface"
                      role="presentation"
                    >
                      <div
                        className="ms-List-page"
                        role="presentation"
                        style={Object {}}
                      >
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={0}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={1}
                            className="ms-FocusZone css-50 ms-DetailsRow root-137"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone28"
                            data-is-focusable={true}
                            data-item-index={0}
                            data-selection-index={0}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-144"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-140 cellUnpadded-138"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-147"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-75"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-76"
                                        id="TextField29"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:00"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-140 cellUnpadded-138"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-147"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-75"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-76"
                                        id="TextField32"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:40"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-143"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={1}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={2}
                            className="ms-FocusZone css-50 ms-DetailsRow root-137"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone35"
                            data-is-focusable={true}
                            data-item-index={1}
                            data-selection-index={1}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-144"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-140 cellUnpadded-138"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  className="ms-Button ms-Button--primary root-96"
                                  data-is-focusable={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-64"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Icon root-37 css-148 ms-Button-icon icon-66"
                                      data-icon-name="Leave"
                                      role="presentation"
                                      style={
                                        Object {
                                          "fontFamily": "\\"FabricMDL2Icons-15\\"",
                                        }
                                      }
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-65"
                                    >
                                      <span
                                        className="ms-Button-label label-97"
                                        id="id__36"
                                      >
                                        Punch In
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-140 cellUnpadded-138"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  aria-disabled={true}
                                  className="ms-Button ms-Button--primary is-disabled root-149"
                                  data-is-focusable={false}
                                  disabled={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-64"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Button-icon icon-152"
                                      data-icon-name="Leave"
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-65"
                                    >
                                      <span
                                        className="ms-Button-label label-97"
                                        id="id__39"
                                      >
                                        Punch Out
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-143"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        dir="ltr"
      >
        <div
          className="ms-ProgressIndicator root-130"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-131"
          >
            Punched
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-133"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-134"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={40}
              className="ms-ProgressIndicator-progressBar progressBar-135"
              role="progressbar"
              style={
                Object {
                  "transition": undefined,
                  "width": "40%",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        dir="rtl"
      >
        <div
          className="ms-ProgressIndicator root-130"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-131"
          >
            Scheduled
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-133"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-134"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={20}
              className="ms-ProgressIndicator-progressBar progressBar-135"
              role="progressbar"
              style={
                Object {
                  "transition": undefined,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch Card With Hook 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-69"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md6"
    >
      <span
        className="css-69"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-70"
      >
        <div
          className="ms-StackItem css-71"
        >
          <div
            className="ms-Stack css-72"
          >
            <div
              className="ms-TextField root-153"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-61"
                >
                  <label
                    className="ms-Label root-62"
                  >
                    Hours
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-63"
                    data-is-focusable={true}
                    id="id__45"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-64"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-68 ms-Button-icon icon-66"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-75"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel44"
                    className="ms-TextField-field field-76"
                    id="TextField42"
                    max={24}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="09"
                  />
                </div>
              </div>
            </div>
            <div
              className="ms-TextField root-153"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-61"
                >
                  <label
                    className="ms-Label root-62"
                  >
                    Minutes
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-63"
                    data-is-focusable={true}
                    id="id__52"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-64"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-68 ms-Button-icon icon-66"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-75"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel51"
                    className="ms-TextField-field field-76"
                    disabled={false}
                    id="TextField49"
                    max={59}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="00"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-71"
        >
          <div
            className="ms-MessageBar ms-MessageBar-multiline root-154"
          >
            <div
              className="ms-MessageBar-content content-86"
            >
              <div
                aria-hidden={true}
                className="ms-MessageBar-icon iconContainer-87"
              >
                <i
                  aria-hidden={true}
                  className="icon-94"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                className="ms-MessageBar-text text-89"
                id="MessageBar56"
                role="status"
              >
                <span
                  className="ms-MessageBar-innerText innerText-90"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <div
        className="ms-Stack css-95"
      >
        <div
          className="ms-StackItem css-71"
        />
        <div
          className="ms-StackItem css-71"
        >
          <button
            className="ms-Button ms-Button--primary root-96"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-64"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-148 ms-Button-icon icon-66"
                data-icon-name="Leave"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-15\\"",
                  }
                }
              >
                
              </i>
              <span
                className="ms-Button-textContainer textContainer-65"
              >
                <span
                  className="ms-Button-label label-97"
                  id="id__57"
                >
                  Start Your Day
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
      <span
        className="css-69"
      >
        <h3>
          Scheduled
        </h3>
      </span>
      <div
        className="ms-Viewport"
        style={
          Object {
            "minHeight": 1,
            "minWidth": 1,
          }
        }
      >
        <div
          className="ms-DetailsList is-horizontalConstrained detailsList-99"
          data-automationid="DetailsList"
          data-is-scrollable="false"
        >
          <div
            aria-colcount={2}
            aria-readonly="true"
            aria-rowcount={1}
            role="grid"
          >
            <div
              className="ms-DetailsList-headerWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-FocusZone css-50 ms-DetailsHeader root-101"
                data-automationid="DetailsHeader"
                data-focuszone-id="FocusZone61"
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDownCapture={[Function]}
                onMouseMove={[Function]}
                role="row"
              >
                <div
                  aria-colindex={1}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-117"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-in-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-125"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header60-punch-in-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-123"
                      data-is-focusable={true}
                      id="header60-punch-in-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-124"
                        id="header60-punch-in-time-name"
                      >
                        In Time
                      </span>
                    </span>
                  </span>
                </div>
                <div
                  aria-colindex={2}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-117"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-out-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-125"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header60-punch-out-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-123"
                      data-is-focusable={true}
                      id="header60-punch-out-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-124"
                        id="header60-punch-out-time-name"
                      >
                        Out Time
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-DetailsList-contentWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-SelectionZone"
                onClick={[Function]}
                onContextMenu={[Function]}
                onDoubleClick={[Function]}
                onFocusCapture={[Function]}
                onKeyDown={[Function]}
                onKeyDownCapture={[Function]}
                onMouseDown={[Function]}
                onMouseDownCapture={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-50 focusZone-100"
                  data-focuszone-id="FocusZone62"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                >
                  <div
                    className="ms-List"
                  >
                    <div
                      className="ms-List-surface"
                      role="presentation"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        dir="ltr"
      >
        <div
          className="ms-ProgressIndicator root-130"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-131"
          >
            Punched
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-133"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-134"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={0}
              className="ms-ProgressIndicator-progressBar progressBar-135"
              role="progressbar"
              style={
                Object {
                  "transition": "none",
                  "width": "0%",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        dir="rtl"
      >
        <div
          className="ms-ProgressIndicator root-130"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-131"
          >
            Scheduled
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-133"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-134"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={20}
              className="ms-ProgressIndicator-progressBar progressBar-135"
              role="progressbar"
              style={
                Object {
                  "transition": undefined,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Test Pivot Test 1`] = `
<div
  className="ms-Stack css-42"
>
  <div
    aria-label="Basic Pivot Example"
    className="ms-depth-8"
    role="toolbar"
  >
    <div
      className="ms-FocusZone css-50 ms-Pivot root-43"
      data-focuszone-id="FocusZone1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-51"
        data-content="Convert 2 Timestamp"
        data-is-focusable={true}
        data-order={1}
        data-title="My Files Title"
        id="Pivot0-Tab0"
        name="Convert 2 Timestamp"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-52"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-47"
          >
            <span
              className="ms-Pivot-text text-48"
            >
               
              Convert 2 Timestamp
            </span>
          </span>
        </span>
      </button>
      <button
        aria-selected={false}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-59"
        data-content="Convert 2 Date"
        data-is-focusable={true}
        id="Pivot0-Tab1"
        name="Convert 2 Date"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-52"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-47"
          >
            <span
              className="ms-Pivot-text text-48"
            >
               
              Convert 2 Date
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot0-Tab0"
      className="itemContainer-44"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="ms-Stack css-42"
        >
          <span
            className="css-60"
          >
            Convert 2 Timestamp
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
